--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Business and IT Olympiad adalah bagian dari serangkaian acara ISE! dengan konsep kompetisi tingkat nasional yang ditujukan bagi pelajar SMA/SMK dengan menggabungkan antara bisnis dan teknologi informasi. Kompetisi terbagi menjadi 4 tahap yaitu, penyisihan 1, penyisihan 2, semifinal, dan final. Adapun penyisihan dilakukan serentak secara online di seluruh Indonesia" />
   <meta name="keywords"
-    content="ISE, Sistem Informasi ITS, Sistem Informasi, ITS, Olimpiade, Bisnis, TIK, Teknologi, Pameran IT, Konser, Bionix, Icon" />
+    content="ISE 2021, ISE, Sistem Informasi ITS, Sistem Informasi, ITS, Olimpiade, Bisnis, TIK, Teknologi, Pameran IT, Konser, Bionix, Icon" />
   <meta name="author" content="IT Dev ISE! 2020" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -32,87 +32,76 @@
 </head>
 
 <body class="bg-gradient">
-  <!-- Logo -->
-
+  
   <!--navbar-->
-  <nav class="navbar navbar-expand-md text-dark-blue container mb-5">
-    <div class="nav-item">
-      <img src="img/Logo_ISE_2020.png" alt="logo ISE! 2020" style="width: 48px; height: auto" />
-    </div>
-  </nav>
-
+  <div class="nav-container">
+      <nav class="navbar navbar-expand-lg container mb-5">
+        <div class="logo"><a href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" style="width: 140px; height: auto" /></a></div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
+          <ul class="border-0 nav nav-tabs ml-auto" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" href="#about" data-toggle="tab" role="tab">Home</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Student Level</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#prizes" data-toggle="tab" role="tab">College Level</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+   </div>
   <!--Header-->
   <header>
     <div class="container">
-      <div class="row justify-content-center" id="header-row">
+      <div class="row text-center" id="header-row">
         <div class="col-12">
-          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" />
+          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" style="max-width:50%;justify-content: center;"/>
         </div>
         <div class="col-12">
-          <h1>BIONIX registration is closed since November 15th 2020, see you next ISE! :) </h1>
+          <h1>BUSINESS AND IT OLYMPIAD <br>ON INFORMATION SYSTEM EXPO</h1>
         </div>
       </div>
     </div>
-    <!-- <div class="countdown mt-3">
-      <li class="rounded shadow-sm"><span id="days">00</span> Day</li>
-      <li class="rounded shadow-sm"><span id="hours">00</span> Hour</li>
-      <li class="rounded shadow-sm"><span id="minutes">00</span> Minute</li>
-      <li class="rounded shadow-sm"><span id="seconds">00</span> Second</li>
-    </div>
-    <div class="tombol">
+    
+    <!-- <div class="tombol">
       <a href="#" target="_blank">
         <button type="button" class="button">Apply now</button>
       </a>
     </div> -->
   </header>
 
-  <!--Section list-->
-  <ul class="border-0 nav nav-tabs justify-content-center" role="tablist">
-    <li class="nav-item" role="presentation">
-      <a class="nav-link active" href="#about" data-toggle="tab" role="tab">About</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Timeline</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" href="#prizes" data-toggle="tab" role="tab">Prizes</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" href="#contact" data-toggle="tab" role="tab">Contact</a>
-    </li>
-  </ul>
 
   <div class="tab-content">
     <!--about-->
     <section id="about" class="tab-pane fade show active full-section bgipad" role="tabpanel">
-      <div class="title">
-        <div class="title-heading">
-          <h1>What is BIONIX 2020?</h1>
-        </div>
-      </div>
       <div id="descbox-about">
         <div class="description">
           <p>
-            BIONIX adalah serangkaian acara ISE! dengan konsep kompetisi
-            tingkat nasional yang ditujukan bagi pelajar SMA/SMK dengan
-            menggabungkan antara bisnis dan teknologi informasi. Pada BIONIX
-            2020 kali ini menggunakan model kompetisi Business and IT
-            Innovation Competition yang memberikan kesempatan bagi peserta
-            untuk me ide bisnis kreatif berbasis IT sesuai dengan tema yang
-            telah ditentukan. Pada kompetisi tahun ini, BIONIX 2020 akan
-            dilakukan secara online mulai dari babak penyisihan hingga final.
-            Selain itu, semua peserta BIONIX 2020 akan mendapatkan pencerdasan
-            berupa kegiatan coaching dengan narasumber yang kompeten pada
-            bidangnya.
+            Business and IT Olympiad on Information System Expo adalah bagian dari serangkaian acara ISE! dengan konsep olimpiade dan kompetisi tingkat nasional yang ditujukan bagi pelajar SMA/SMK/sederajat dan mahasiswa. Bionix ISE! 2021 hadir dengan konsep daring penuh yang memadukan teori dan implementasi dari manajemen, bisnis, dan teknologi informasi.
+
           </p>
         </div>
       </div>
+      <div class="text-coming-soon">Coming Soon</div>
+      <div class="text-stay-tune"><span>Stay tuned,</span> our website is on the way!</div>
+      <div class="countdown mt-3">
+        <li class="rounded p-1"><span id="days">00</span> Day</li>
+        <li class="rounded p-1"><span id="hours">00</span> Hour</li>
+        <li class="rounded p-1"><span id="minutes">00</span> Minute</li>
+        <li class="rounded p-1"><span id="seconds">00</span> Second</li>
+      </div>
       <div class="tombol">
-        <a href="https://dashboard-ise-2020.s3-ap-southeast-1.amazonaws.com/Guildeline+Book+Bionix+2020.pdf"
-          target="_blank">
+        <a href="#">
           <button type="button" class="button" id="button2">
             Download Guideline
           </button>
+        </a>
+        <a href="#">
+        <button type="button" class="button" id="button3">
+          Daftar Bionix
+        </button>
         </a>
       </div>
     </section>
@@ -204,26 +193,15 @@
   </div>
 
   <!--footer-->
+  <footer>
   <div class="container" id="footer">
     <div class="img"></div>
     <div class="row">
       <div class="col-12 col-sm-6 text-center text-sm-left">
-        <h1>Information System Expo</h1>
-        <h1>Breakthrough</h1>
-        <p>
-          ISE! merupakan singkatan dari Information Systems Expo yang
-          merupakan event tahunan yang diselenggarakan oleh Departemen Sistem
-          Informasi Institut Teknologi Sepuluh Nopember Surabaya dalam rangka
-          memperkenalkan Departemen Sistem Informasi ITS kepada masyarakat
-          luas.
-        </p>
-        <h1 class="d-none d-sm-block" style="margin-top: 30px">© 2020 ISE</h1>
-      </div>
-      <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
         <h1>Find us on social media</h1>
         <div class="listsocmed">
-          <a href="https://line.me/R/ti/p/%40isexpo" target="_blank" title="Line">
-            <i class="fab fa-line" aria-hidden="true"></i>
+          <a href="https://ise-its.com/" target="_blank" title="Website">
+            <i class="fas fa-globe" aria-hidden="true"></i>
           </a>
           <a href="https://www.instagram.com/is_expo/" target="_blank" title="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
@@ -231,29 +209,36 @@
           <a href="https://twitter.com/is_expo" target="_blank" title="Twitter">
             <i class="fab fa-twitter" aria-hidden="true"></i>
           </a>
-          <a href="https://vt.tiktok.com/ZSaw8WST/" target="_blank" title="Tiktok">
-            <i class="fab fa-tiktok" aria-hidden="true"></i>
-          </a>
           <a href="https://www.youtube.com/channel/UCPbOX3w8G4_dwOMDNl97PTw" target="_blank" title="YouTube">
             <i class="fab fa-youtube" aria-hidden="true"></i>
           </a>
-          <a class="d-sm-none" href="https://ise-its.com/" target="_blank" title="Website">
-            <i class="fas fa-globe" aria-hidden="true"></i>
+          <a href="https://vt.tiktok.com/ZSaw8WST/" target="_blank" title="Tiktok">
+            <i class="fab fa-tiktok" aria-hidden="true"></i>
+          </a>
+          <a href="https://line.me/R/ti/p/%40isexpo" target="_blank" title="Line">
+            <i class="fab fa-line" aria-hidden="true"></i>
+          </a>
+          <a href="#" target="_blank" title="Linkedin">
+            <i class="fab fa-linkedin" aria-hidden="true"></i>
           </a>
         </div>
-        <div id="web-ise">
-          <a class="d-none d-sm-block" href="https://ise-its.com/" target="_blank" title="Website">ise-its.com
-            <i class="fas fa-globe" aria-hidden="true"></i>
-          </a>
-        </div>
+      </div>
+      <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
         <div class="logo">
           <img src="img/logo1.png" style="height: 102px; width: 102px" class="img-fluid" />
           <img src="img/logo-si.png" style="width: 149px; height: 53px" class="img-fluid" />
         </div>
-        <h1 class="d-sm-none" style="margin-top: 30px">© 2020 ISE</h1>
+        <h1>
+          <span>
+            <i class="fa fa-copyright" aria-hidden="true"></i>
+          </span>
+          2021 ISE
+        </h1>
+        
       </div>
     </div>
   </div>
+</footer>
 
   <!--Js-->
   <script src="js/jquery.min.js"></script>
