--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
           <ul class="border-0 nav nav-tabs ml-auto" role="tablist">
             <li class="nav-item" role="presentation">
-              <a class="nav-link active" href="#about" data-toggle="tab" role="tab">Home</a>
+              <a class="nav-link active" href="#home" data-toggle="tab" role="tab">Home</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Student Level</a>
+              <a class="nav-link" href="#studentlevel" data-toggle="tab" role="tab">Student Level</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" href="#prizes" data-toggle="tab" role="tab">College Level</a>
+              <a class="nav-link" href="#collegelevel" data-toggle="tab" role="tab">College Level</a>
             </li>
           </ul>
         </div>
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row text-center" id="header-row">
         <div class="col-12">
-          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" style="max-width:50%;justify-content: center;"/>
+          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" style="justify-content: center;margin: 100px 0 100px 0;"/>
         </div>
         <div class="col-12">
           <h1>BUSINESS AND IT OLYMPIAD <br>ON INFORMATION SYSTEM EXPO</h1>
@@ -75,7 +75,7 @@
 
   <div class="tab-content">
     <!--about-->
-    <section id="about" class="tab-pane fade show active full-section bgipad" role="tabpanel">
+    <section id="home" class="tab-pane fade show active full-section bgipad" role="tabpanel">
       <div id="descbox-about">
         <div class="description">
           <p>
@@ -93,21 +93,66 @@
         <li class="rounded p-1"><span id="seconds">00</span> Second</li>
       </div>
       <div class="tombol">
-        <a href="#">
-          <button type="button" class="button" id="button2">
-            Download Guideline
-          </button>
-        </a>
-        <a href="#">
-        <button type="button" class="button" id="button3">
-          Daftar Bionix
-        </button>
-        </a>
+        <a href="#" id="button2">Download Guideline</a>
+        <a href="#" id="button3">Daftar Bionix</a>
       </div>
     </section>
 
+    <!--student level section-->
+    <section id="studentlevel" class="tab-pane fade full-section bgipad" role="tabpanel">
+      <div class="nav-container">
+        <nav class="navbar navbar-expand-lg container mb-5">
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
+            <ul class="border-0 nav nav-tabs mx-auto" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#about" data-toggle="tab" role="tab">About</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Benefit</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#prizes" data-toggle="tab" role="tab">Timeline</a>
+              </li>
+            </ul><ul class="border-0 nav nav-tabs mx-auto" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#about" data-toggle="tab" role="tab">FAQ</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Contact</a>
+            </ul>
+          </div>
+        </nav>
+     </div>
+      <div class="container" id="timeline-img">
+        <img src="img/timeline.svg" class="img-fluid" />
+      </div>
+    </section>
+    
     <!--timeline-->
     <section id="timeline" class="tab-pane fade full-section bgipad" role="tabpanel">
+      <div class="nav-container">
+        <nav class="navbar navbar-expand-lg container mb-5">
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
+            <ul class="border-0 nav nav-tabs mx-auto" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#about" data-toggle="tab" role="tab">About</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Benefit</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#prizes" data-toggle="tab" role="tab">Timeline</a>
+              </li>
+            </ul><ul class="border-0 nav nav-tabs mx-auto" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#about" data-toggle="tab" role="tab">FAQ</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#timeline" data-toggle="tab" role="tab">Contact</a>
+            </ul>
+          </div>
+        </nav>
+     </div>
       <div class="container" id="timeline-img">
         <img src="img/timeline.svg" class="img-fluid" />
       </div>
