Home selesai fix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
-          <ul class="border-0 nav nav-tabs ml-auto" role="tablist">
+          <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link active" href="#home" data-toggle="tab" role="tab">Home</a>
             </li>
@@ -273,7 +273,7 @@
       <div class="row">
         <div class="col col-sm-2 text-center text-sm-left">
           <ul>
-            <li><strong><a href="#">Our Events</a></strong></li>
+            <p><strong>Our Events</strong></p>
             <li><a href="#">ISE!</a></li>
             <li><a href="#">Icon</a></li>
             <li><a href="#">Merch</a></li>
@@ -281,14 +281,14 @@
         </div>
         <div class="col col-sm-3 text-center text-sm-left">
           <ul>
-            <li><strong><a href="#">Bionix</a></strong></li>
+            <p><strong>Bionix</strong></p>
             <li><a href="#">Bionix Student Level</a></li>
             <li><a href="#">Bionix College Level</a></li>
           </ul>
         </div>
         <div class="col col-sm-3 text-center text-sm-left">
           <ul>
-            <li><strong><a href="#">ICON</a></strong></li>
+            <p><strong>ICON</strong></p>
             <li><a href="#">ICON Academy</a></li>
             <li><a href="#">Grand Talkshow</a></li>
             <li><a href="#">E-Hall of IS</a></li>
