--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/normalize.min.css" />
   <link rel="stylesheet" href="fonts/fontawesome/css/fontawesome-all.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KGB6BB4MW"></script>
   <script>
@@ -37,7 +35,7 @@
   
   <!--navbar section-->
   <div class="nav-container">
-      <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
+      <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5 ">
         <div class="logo"><a class="navbar-brand" href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
           <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
@@ -253,6 +251,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/countdown.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 
 </html>
