--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!--navbar section-->
   <div class="nav-container">
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5 ">
-        <div class="logo"><a class="navbar-brand" href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" /></a></div>
+        <div class="logo"><a class="navbar-brand" href="#"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
           <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
             <li class="nav-item" role="presentation">
@@ -115,7 +115,7 @@
                 </p>
               </div>
               <div class="container" id="timeline-img">
-                <img src="img/tahapan-persyaratan-student-level.png" class="img-fluid" />
+                <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" />
               </div>
             </div>
           </section>
@@ -132,7 +132,7 @@
           <section id="sltimeline" class="tab-pane fade full-section bgipad" role="tabpanel">
             <div class="container" id="timeline-img">
               <div class="text-center text-coming-soon">STUDENT<br>LEVEL</div>
-              <img src="img/timeline-student-level.png" class="img-fluid" style="margin: 200px 0;"/>
+              <img src="/img/timeline-student-level.png" class="img-fluid" style="margin: 200px 0;"/>
             </div>
           </section>
 
@@ -148,28 +148,28 @@
                 </p>
               </div>
               <div class="container">
-                <img src="img/tahapan-persyaratan-college-level.png" class="img-fluid" />
+                <img src="/img/tahapan-persyaratan-college-level.png" class="img-fluid" />
               </div>
             </div>
-            <img src="img/Landscape planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
           </section>
           
           <!-- benefit section -->
           <section id="clbenefit" class="tab-pane fade full-section bgipad" role="tabpanel">
               <div class="container">
-                <div class="text-center text-coming-soon">College <br>LEVEL</div>
+                <div class="text-center text-coming-soon">COLLEGE<br>LEVEL</div>
                 <img src="/img/benefit-college-level.png" alt="Fasilitas" class="img-fluid">
               </div>
-            <img src="img/Landscape planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
           </section>
           
           <!--timeline section-->
           <section id="cltimeline" class="tab-pane fade full-section bgipad" role="tabpanel">
             <div class="container">
-              <div class="text-center text-coming-soon">College <br>LEVEL</div>
-              <img src="img/timeline-college-level.png" class="img-fluid" style="margin-top: 200px;" />
+              <div class="text-center text-coming-soon">COLLEGE <br>LEVEL</div>
+              <img src="/img/timeline-college-level.png" class="img-fluid" style="margin-top: 200px;" />
             </div>
-            <img src="img/Landscape planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
           </section>
 
 
@@ -178,7 +178,7 @@
           <div class="container" id="footer">
             <div class="row">
               <div class="col-12 col-sm-6 text-center text-sm-left">
-                <img src="img/Logo ISE 2021 Putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
+                <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
                 <h1>Find us on our social media</h1>
