Fix image and adding id

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="nav-item" role="presentation">
               <a class="nav-link active" href="#home" data-toggle="tab" role="tab">Home</a>
             </li>
-            <li class="nav-item dropdown" role="presentation">
+            <li class="nav-item dropdown" role="presentation" id="sl-dropdown-item">
               <a class="nav-link" href="#slabout" data-toggle="tab" role="tab">Student Level<i class="fas fa-angle-down"></i></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About<i class="fas fa-angle-right"></i></a></li>
@@ -50,7 +50,7 @@
                 <li><a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-angle-right"></i></a></li>
                 </ul>
             </li>
-            <li class="nav-item dropdown" role="presentation">
+            <li class="nav-item dropdown" role="presentation" id="cl-dropdown-item">
               <a class="nav-link" href="#clabout" data-toggle="tab" role="tab">College Level<i class="fas fa-angle-down"></i></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-angle-right"></i></a></li>
@@ -151,7 +151,7 @@
                 <img src="/img/tahapan-persyaratan-college-level.png" class="img-fluid" />
               </div>
             </div>
-            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
           </section>
           
           <!-- benefit section -->
@@ -160,7 +160,7 @@
                 <div class="text-center text-coming-soon">COLLEGE<br>LEVEL</div>
                 <img src="/img/benefit-college-level.png" alt="Fasilitas" class="img-fluid">
               </div>
-            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
           </section>
           
           <!--timeline section-->
@@ -169,7 +169,7 @@
               <div class="text-center text-coming-soon">COLLEGE <br>LEVEL</div>
               <img src="/img/timeline-college-level.png" class="img-fluid" style="margin-top: 200px;" />
             </div>
-            <img src="/img/landscape-planet.png" style="width: 99.6vw;"/>
+            <img src="/img/landscape-planet.png" style="width: 99.4vw;"/>
           </section>
 
 
