responsive-navbar and text font size

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
   <!--navbar section-->
   <div class="nav-container">
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
-       
         <div class="logo"><a class="navbar-brand" href="#"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
-        <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target"> 
+        <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
           <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link active" href="#home" data-toggle="tab" role="tab">Home</a>
@@ -118,8 +117,8 @@
 
                 </p>
               </div>
-              <div class="container" id="timeline-img">
-                <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" />
+              <div class="container-fluid" id="timeline-img">
+                <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" style="margin-bottom: 20rem;"/>
               </div>
             </div>
           </section>
