--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                   <!-- <a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About<i class="fas fa-angle-right"></i></a> -->
                 </li>
                 <li>
-                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-angle-right"></i></button>
+                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-angle-right"></i></button>
                   <!-- <a class="dropdown-item" href="#slbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-angle-right"></i></a> -->
                 </li>
                 <li>
-                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-angle-right"></i></button>
+                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-angle-right"></i></button>
                   <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-angle-right"></i></a> -->
                 </li>
                 </ul>
@@ -62,9 +62,18 @@
             <li class="nav-item dropdown" role="presentation" id="cl-dropdown-item">
               <a class="nav-link" href="#clabout" data-toggle="tab" role="tab">College Level<i class="fas fa-angle-down"></i></a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-angle-right"></i></a></li>
-                <li><a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-angle-right"></i></a></li>
-                <li><a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-angle-right"></i></a></li>
+                <li>
+                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-angle-right"></i></button>
+                  <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-angle-right"></i></a> -->
+                </li>
+                <li>
+                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-angle-right"></i></button>
+                  <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-angle-right"></i></a> -->
+                </li>
+                <li>
+                  <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-angle-right"></i></button>
+                  <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-angle-right"></i></a> -->
+                </li>
                 </ul>
             </li>
           </ul>
