Fix navbar + hamburger navbar

--- a/slabout.html
+++ b/slabout.html
@@ -42,11 +42,11 @@
             <li class="nav-item" role="presentation">
               <!-- <button class="nav-link active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button> -->
               <!-- <a class="nav-link active" href="#home" data-toggle="tab" role="tab">Home</a> -->
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown" role="presentation" id="sl-dropdown-item">
               <!-- <a class="nav-link" href="#slabout" data-toggle="tab" role="tab">Student Level<i class="fas fa-angle-down"></i></a> -->
-              <a class="nav-link">Student Level<i class="fas fa-angle-down"></i></a>
+              <a class="nav-link active">Student Level<i class="fas fa-angle-down"></i></a>
               <ul class="dropdown-menu">
                 <li>
                   <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-angle-right"></i></button> -->
@@ -112,7 +112,7 @@
 
         <div class="tab-content">
           <!--home section-->
-          <section id="home" class="tab-pane fade show active full-section bgipad" role="tabpanel">
+          <section id="home" class="tab-pane fade full-section bgipad" role="tabpanel">
             <div id="descbox-about">
               <div class="description">
                 <p>
@@ -136,7 +136,7 @@
 
           <!--student level section-->
           <!-- about section -->
-          <section id="slabout" class="tab-pane fade full-section bgipad" role="tabpanel">
+          <section id="slabout" class="tab-pane fade show active full-section bgipad" role="tabpanel">
             <div class="text-center" id="descbox-about">
               <div class="text-coming-soon">STUDENT<br>LEVEL</div>
               <div class="description">
